# bartender-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.rst  docker-compose.yml  preset.env  pyproject.toml
src/: config.py  database.sqlite  embeds.py  emojis.py  exceptions.py  main.py  typedefs.py  utils.py
src/cogs/: craft.py  inventory.py  random.py  rolls.py  search.py  trade.py  utils.py
src/database/: init.py  models.py  sqlite.py
src/database/mixins/: __init__.py  base.py  drinks.py  glasses.py  ingredients.py  users.py
